Example openrewrite update to Java 11 #24574 (#24575)
* java 11 updates

* add rewrite.yml

* update to combine rules into yaml

* fixes applied to enterprise code

* add excludes